controller/test/e2e/features/agentgateway/csrf/testdata/csrf-gw.yaml
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: csrf-gw-policy
  namespace: agentgateway-base
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
  traffic:
    csrf:
      additionalOrigins:
      - example.org
