controller/test/e2e/features/agentgateway/csrf/testdata/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: svc-route
  namespace: agentgateway-base
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: backend
          port: 80
      matches:
      - path:
          type: PathPrefix
          value: /path1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: svc-route-2
  namespace: agentgateway-base
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: backend
          port: 80
      matches:
      - path:
          type: PathPrefix
          value: /path2
